--- a/main_user_config.yml
+++ b/main_user_config.yml
@@ -1,6 +1,13 @@
 ---
 - hosts: localhost
   tasks:
+    - name: making directories
+      file:
+        state: directory
+        path: "{{ansible_env.HOME}}/{{item.path}}"
+      with_filetree: HOME/
+      when: item.state == 'directory'
+
     - name: configuration file linking
       file:
         state: link
