--- a/HOME/.config/terminator/config
+++ b/HOME/.config/terminator/config
@@ -3,10 +3,23 @@
   title_hide_sizetext = True
   title_font = Terminus 18
 [keybindings]
+  switch_to_tab_10 = <Alt>0
+  split_horiz = <Super>h
+  switch_to_tab_6 = <Alt>6
+  switch_to_tab_7 = <Alt>7
+  switch_to_tab_4 = <Alt>4
+  switch_to_tab_5 = <Alt>5
+  switch_to_tab_2 = <Alt>2
+  switch_to_tab_3 = <Alt>3
+  switch_to_tab_1 = <Alt>1
+  split_vert = <Super>v
+  switch_to_tab_8 = <Alt>8
+  switch_to_tab_9 = <Alt>9
 [profiles]
   [[default]]
-    background_color = "#300a24"
-    background_darkness = 0.4
+    background_darkness = 0.89
+    background_image = None
+    font = Monospace 8
     background_type = transparent
     cursor_color = "#aaaaaa"
     font = Monospace 18
@@ -16,9 +29,10 @@
 [layouts]
   [[default]]
     [[[child1]]]
-      parent = window0
       type = Terminal
+      parent = window0
+      profile = default
     [[[window0]]]
-      parent = ""
       type = Window
+      parent = ""
 [plugins]
