--- a/HOME/.nanorc
+++ b/HOME/.nanorc
@@ -1,30 +1,1 @@
-set autoindent
-set const
-set historylog
-set morespace
-set smarthome
-set smooth
-set softwrap
-set suspend
-set tabsize 4
-set undo
-
-## Syntax file assumed to exists
-#include "/usr/share/nano/conf.nanorc"
-#include "/usr/share/nano/css.nanorc"
-#include "/usr/share/nano/git.nanorc"
-#include "/usr/share/nano/html.nanorc"
-#include "/usr/share/nano/ini.nanorc"
-#include "/usr/share/nano/inputrc.nanorc"
-#include "/usr/share/nano/java.nanorc"
-#include "/usr/share/nano/javascript.nanorc"
-#include "/usr/share/nano/json.nanorc"
-#include "/usr/share/nano/makefile.nanorc"
-#include "/usr/share/nano/markdown.nanorc"
-#include "/usr/share/nano/nanorc.nanorc"
-#include "/usr/share/nano/php.nanorc"
-#include "/usr/share/nano/properties.nanorc"
-#include "/usr/share/nano/sed.nanorc"
-#include "/usr/share/nano/shell.nanorc"
-#include "/usr/share/nano/systemd.nanorc"
-#include "/usr/share/nano/xml.nanorc"
+/home/t/Scrivania/nanostuff/testing.nanorc
