--- a/HOME/.config/terminator/config
+++ b/HOME/.config/terminator/config
@@ -1,37 +1,38 @@
 [global_config]
-  borderless = True
-  scroll_tabbar = True
-  suppress_multiple_term_dialog = True
-  title_font = Sans 26
+  geometry_hinting = True
+  title_hide_sizetext = True
+  title_font = Terminus 18
 [keybindings]
-  help = <Primary>F1
-  layout_launcher = Pause
-  split_horiz = <Super>h
-  split_vert = <Super>v
-  switch_to_tab_1 = <Alt>1
   switch_to_tab_10 = <Alt>0
-  switch_to_tab_2 = <Alt>2
-  switch_to_tab_3 = <Alt>3
-  switch_to_tab_4 = <Alt>4
-  switch_to_tab_5 = <Alt>5
+  split_horiz = <Super>h
   switch_to_tab_6 = <Alt>6
   switch_to_tab_7 = <Alt>7
+  switch_to_tab_4 = <Alt>4
+  switch_to_tab_5 = <Alt>5
+  switch_to_tab_2 = <Alt>2
+  switch_to_tab_3 = <Alt>3
+  switch_to_tab_1 = <Alt>1
+  split_vert = <Super>v
   switch_to_tab_8 = <Alt>8
   switch_to_tab_9 = <Alt>9
-[layouts]
-  [[default]]
-    [[[child1]]]
-      parent = window0
-      profile = default
-      type = Terminal
-    [[[window0]]]
-      parent = ""
-      type = Window
-[plugins]
 [profiles]
   [[default]]
-    background_darkness = 1.0
+    background_darkness = 0.89
+    background_image = None
+    font = Monospace 8
     background_type = transparent
     cursor_color = "#aaaaaa"
     font = Monospace 18
     foreground_color = "#ffffff"
+    word_chars = "-,./?%&#:_@"
+    use_system_font = False
+[layouts]
+  [[default]]
+    [[[child1]]]
+      type = Terminal
+      parent = window0
+      profile = default
+    [[[window0]]]
+      type = Window
+      parent = ""
+[plugins]
