--- a/HOME/.ssh/config
+++ b/HOME/.ssh/config
@@ -86,3 +86,17 @@ Host kraft
 	User main
 	IdentityFile ~/.ssh/id_kraft
 
+Host rasbino
+	HostName rasbino.homenet.telecomitalia.it
+	User trevisiol
+	IdentityFile ~/.ssh/id_rasbino
+
+Host rrasbino
+	HostName rasbino.homenet.telecomitalia.it
+	User root
+	IdentityFile ~/.ssh/id_rasbino
+
+Host remarkable
+	HostName 10.11.99.1
+	User root
+	
