--- a/HOME/.ssh/config
+++ b/HOME/.ssh/config
@@ -103,3 +103,9 @@ Host remarkable
 Host kali
 	HostName 192.168.122.88
 	User root
+
+Host unicatt
+	HostName gitlab.dmf.unicatt.it
+	User git
+	IdentityFile ~/.ssh/id_rasbino
+
