Aggiornamento di configurazioni

--- a/HOME/.ssh/config
+++ b/HOME/.ssh/config
@@ -87,13 +87,8 @@ Host kraft
 	IdentityFile ~/.ssh/id_kraft
 
 Host rasbino
-	HostName rasbino.homenet.telecomitalia.it
-	User trevisiol
-	IdentityFile ~/.ssh/id_rasbino
-
-Host rrasbino
-	HostName rasbino.homenet.telecomitalia.it
-	User root
+	HostName rasbino.fritz.box
+	User pi
 	IdentityFile ~/.ssh/id_rasbino
 
 Host remarkable
