--- a/HOME/.config/terminator/config
+++ b/HOME/.config/terminator/config
@@ -1,4 +1,5 @@
 [global_config]
+  window_state = maximise
   title_use_system_font = False
 [keybindings]
   split_horiz = <Super>h
@@ -15,7 +16,7 @@
   switch_to_tab_10 = <Alt>0
 [profiles]
   [[default]]
-    background_darkness = 0.0
+    background_darkness = 0.9
     background_type = transparent
     cursor_color = "#aaaaaa"
     font = Bitstream Vera Sans Mono 18
