Aggiornamento ssh/config

--- a/HOME/.ssh/config
+++ b/HOME/.ssh/config
@@ -94,6 +94,9 @@ Host rasbino
 Host remarkable
 	HostName 10.11.99.1
 	User root
+	HostKeyAlgorithms +ssh-rsa
+	PubkeyAcceptedKeyTypes +ssh-rsa
+
 	
 Host kali
 	HostName 192.168.122.88
@@ -102,5 +105,10 @@ Host kali
 Host unicatt
 	HostName gitlab.dmf.unicatt.it
 	User git
+	IdentityFile ~/.ssh/id_rasbino
+
+Host umbrel
+	HostName umbrel
+	User umbrel
 	IdentityFile ~/.ssh/id_rasbino
 
