--- a/WORK/.gitconfig
+++ b/WORK/.gitconfig
@@ -1,8 +1,14 @@
-[core]
-	editor = /usr/bin/vim
 [user]
 	name = Marco Trevisiol
 	email = marco.trevisiol@deimosholding.com
+[color]
+	ui = auto
+[color "diff"]
+	whitespace = red reverse
+[credential]
+	helper = store
+[core]
+	editor = /usr/bin/vim
 [alias]
 	report = log --oneline --decorate
 	last = log -1 --stat HEAD
@@ -12,6 +18,14 @@
 	sync = fetch --all --prune --tags --prune-tags --progress
 [pull]
 	rebase = true
+[push]
+	default = matching
+	autoSetupRemote = true
+	followTags = true
+[fetch]
+	prune = true
+	pruneTags = true
+	all = true
 [help]
 	autoCorrect = prompt
 [column]
@@ -27,13 +41,6 @@
 	colorMoved = plain
 	mnemonicPrefix = true
 	rename = true
-[push]
-	autoSetupRemote = true
-	followTags = true
-[fetch]
-	prune = true
-	pruneTags = true
-	all = true
 [commit]
 	verbose = true
 [rerere]
