Updated PS1, ssh, backup

--- a/HOME/.ssh/config
+++ b/HOME/.ssh/config
@@ -87,7 +87,7 @@ Host kraft
 	IdentityFile ~/.ssh/id_kraft
 
 Host rasbino
-	HostName rasbino.fritz.box
+	HostName 192.168.178.200
 	User pi
 	IdentityFile ~/.ssh/id_rasbino
 
@@ -112,3 +112,7 @@ Host umbrel
 	User umbrel
 	IdentityFile ~/.ssh/id_rasbino
 
+Host aws
+  HostName ec2-16-170-173-104.eu-north-1.compute.amazonaws.com
+  User admin
+  IdentityFile ~/.ssh/id_ed25519
