--- a/home/.config/alacritty.toml
+++ b/home/.config/alacritty.toml
@@ -1,7 +1,8 @@
 [env]
 TERM = 'xterm-256color'
 [font]
-size = 8
+size = 10
+normal.family = 'terminus'
 [selection]
 semantic_escape_chars = "=│`|:\"' ()[]{}<>\t"
 [window]
