--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -112,7 +112,7 @@ Host umbrel
 	User umbrel
 	IdentityFile ~/.ssh/id_rasbino
 
-Host aws
-  HostName ec2-16-170-173-104.eu-north-1.compute.amazonaws.com
+Host hetzner
+  HostName atradingsystem.trevisiol.casa
   User admin
   IdentityFile ~/.ssh/id_ed25519
